<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ｅ雀</string>
    <string name="app_nameE">eMahjong</string>
    <string name="app_version">v1.29</string>
    <string name="app_versionMinConnect">v1.29</string>
    <string name="app_MinVersion">v1.29</string>
    <string name="Settings">Settings</string>
    <string name="SettingsRelated">Related</string>
    <string name="Connect">Connect</string>
    <string name="StartGame">Game</string>
    <string name="History">Records</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Null"></string>
    <string name="title_connect">Connect</string>
    <string name="NotConnected">NotConnected</string>
    <string name="Exit">Exit</string>
    <string name="failedBluetooth">Exception on Bluetooth processing.</string>
    <string name="failedBluetoothPermission">Bluetooth is not available by the reason of permission not granted.</string>
    <string name="failedBluetoothPermissionType">Bluetooth permission(%1$s) is not granted. Bluetooth is not available.</string>
    <string name="failedBluetoothPermissionTypeAdvertize">Bluetooth permission(%1$s) is not granted.</string>
    <string name="failedBluetoothUnpair">Failed to unpair process of Bluetooth.</string>
    <string name="BluetoothUnpairRequested">requested unpair %1$s.</string>
    <string name="nowDiscoverable">Now \"Visible\" status(in a certain minutes).</string>
    <string name="Err_No_connection_to_BT">
				"Failed to connect %2$s(%1$s).\n"
				"Is server in \"Accept\"ing status?\n"
				"Multiple Bluetooth connection support depends on the device type. "
				"Is any other Bluetooth App working？\n"
				</string>
    <string name="Err_No_connection_to_IP">Failed to connect to %1$s, is Server \"Accept\"ing？</string>
    <string name="ErrAcceptfailed">\"Accept\"(%1$s) failed, try to restart APP after Bluetooth Off/On on Android Settings.</string>
    <string name="InfoAcceptCanceled">Stooped to \"Accept\"</string>
    <string name="InfoConnectCanceled">\"Connect\" was canceled.</string>
    <string name="BTNotAvalable">Bluetooth is not available.</string>
    <string name="Already_trying_this_connection">Already connecting.</string>
    <string name="InfoBTEnabled">Now Bluetooth is available</string>
    <string name="InfoBTDiscoverFinished">Discovery ended、found %1$d devices.</string>
	<string name="BTSecure">Secure</string>
	<string name="BTInSecure">Insecure</string>
	<string name="No_Connection_to_">Not connected =&gt;</string>
    <string name="LabelLocalDevice">Device : </string>
    <string name="LabelRemoteDevice">ConnectedMember : </string>
	<string name="BTSecureOption">SecureConnection</string>
    <string name="BTAcceptCommon">Accept</string>
    <string name="WDAccept">Accept</string>
    <string name="BTStopAccept">StopAccept</string>
    <string name="WDStopAccept">StopAccept</string>
    <string name="BTConnectCommon">Connect</string>
    <string name="BTGame">Game</string>
    <string name="BTGameRestart">Restart</string>
    <string name="Info_GameRestarted">Game will restart by successful reconnection.</string>
    <string name="Info_IOErrRecovered">Connection remains, request suspend process to the server. Or disconnect then retry \"Connection Failure\"</string>
    <string name="Err_InGameRestarting">Processing disconnection</string>
    <string name="Info_Reconnected">Reconnected to %1$s.</string>
    <string name="Err_ReconnectingEnv">Connected to \"%1$s\", but game can not be restarted because one side is APP restarted state.
									Disconnect from the side in game and \"Suspend/Gameover\" from \"Connection failure\" of Menu.
									</string>
    <string name="Err_ReconnectingExistStartGame">\"%1$s\" is reconnection mode(DuringGame status).\n
									Once disconnect from server by menu:\"Connection failure\", \"Reconnect\", \"Disconenct\".
									Then after \"Suspend/Gameover" if needed,\n
									reconnect to server after \"Gameover\" from menu.
									</string>
    <string name="Err_ReconnectingExistSuspendGame">Server is DuringGame status and \"%1$s\" is connection mode(status of start game).\n
									Ask to server to disconnect this client by menu:\"Connection failure\", \"Reconnect\", \"Disconnect\".
                                    Reconnect after menu:"Gameover" after "Suspend/Gameover". 
									</string>
    <string name="Info_Connected">Connected to %1$s.</string>
    <string name="BTDisConnect">Disconnect</string>
    <string name="BTUnpair">Unpair</string>
    <string name="InfoDisconnected">Disconnected from \"%1$s\".</string>
    <string name="InfoDisconnectedClose">\"%1$s\" closed connection.</string>
    <string name="InfoDisconnectedSomeDevice">Connection broken.</string>
    <string name="LabelDeviceList">DeviceList：</string>
    <string name="LabelWantGroupOwner">As Server</string>
    <string name="Discoverable">Discoverable</string>
    <string name="Discover">Discover</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelExecute">Cancel</string>
    <string name="CancelExecute_Vertical">Cancel</string>
    <string name="Execute">Execute</string>
    <string name="Close">Close</string>
    <string name="OK">OK</string>
    <string name="NG">NG</string>
    <string name="Send">Send</string>
    <string name="SendDiscard">Discard+Send</string>
    <string name="SendBackOK">Agree</string>
    <string name="SendBackNG">Disagree</string>
    <string name="Help">Help</string>
    <string name="BTStatusPaired">Paired</string>
    <string name="BTStatusDiscovered">Available</string>
    <string name="BTStatusConnected">Connecting</string>
    <string name="BTStatusConnectedOnce">OnceConnected</string>
    <string name="NoSession">None</string>
    <string name="ErrNoThread">Failed, restart this App.</string>
    <string name="ErrNoNewDevice">No device found, is the device \"Discoverable\"?</string>
    <string name="InfoDiscoverCanceled">\"Discover\" was canceled</string>
    <string name="InfoDiscoverCancelFailed">Discover was canceled by %1$s.</string>
    <string name="InfoNewDevice">Found %1$d devices.</string>
    <string name="UnknownDeviceName">Unknown Device</string>
    <string name="Unknown">Unknow</string>
    <string name="UnknownRuleName">RuleID is not set.</string>
    <string name="UnknownYourName">foobar</string>
    <string name="noBTadapter">Blutooth is not supported.</string>
    <string name="StatusDiscoverable">(\"Discoverable\")</string>
    <string name="StatusNotDiscoverable">(\"NotDiscoverable\")</string>
    <string name="ErrConnectingForScan">\"Disconnect\", then \"Discover\".</string>
    <string name="ErrAssetFileNotFound">Failed to find asset file:</string>
    <string name="ErrAssetFileRead">Failed to read asset file:</string>
    <string name="HelpTitle_Bluetooth">Bluetooth Connection</string>
	<string name="Title_WaitingAccept">----- Accepting -----</string>
    <string name="Label_No">No</string>
    <string name="Label_ReachLimit">\"Furiten Riichi\" option is effective only when \"Confirm Tenpai\" of Operation setting is ON.</string>
    <string name="Label_ReachLimitOpen">When discarded for OpenRiichi</string>
    <string name="Label_ReachLimitOpenYakuman">Pay Yakuman</string>
    <string name="Label_ReachLimitOpenChombo">Warning</string>
    <string name="Label_ReachLimitOpenRobot">OpenRiichi for robot game</string>
    <string name="Label_ReachLimitOpenRobotNone">No</string>
    <string name="Label_ReachLimitOpenRobotSkip">Ignore the Robot\'s discard.</string>
    <string name="Label_ReachLimitOpenRobotNormal">Robot pays usually.</string>
    <string name="Label_PointAmmount">Score</string>
    <string name="UserAction_Reach"  >Riichi</string>
    <string name="UserAction_Reach_Open_YN">Allow OpenRiichi</string>
    <string name="Desc_OpenReach"></string>
    <string name="Label_FuritenReach">Furiten Riichi</string>
    <string name="Label_FuritenReachNo">No check</string>
    <string name="Label_FuritenReachYes">Allow(Self-Pick only)</string>
    <string name="Label_FuritenReachReject">Reject</string>
    <string name="Label_AnkanAfterReach">Allow Ankan after Riichi.</string>
    <string name="Label_8Continue">8 consecutive win</string>
    <string name="Label_8ContDealer">8 times as dealer</string>
    <string name="Label_9ContDealer">9 times as dealer</string>
    <string name="Label_8ContOnePlayer">Start may be non-dealer</string>
    <string name="Label_8ContStick">Dealer\'s win when 8 sticks</string>
    <string name="Label_8ContStickAnyOne">Anyone win when 8 sticks</string>
    <string name="Label_8ContNoNeedYaku">Apply 1/2-han constraint</string>
    <string name="Label_8ContReset">Next is +8</string>
    <string name="Label_8ContMulti">Combinable</string>
    <string name="Desc_8Continue">Also set \"Evaluate Point\" and \"Check 1-han constraint\" option.</string>
    <string name="Label_PendingRank0">Psuedo-Tenpai</string>
    <string name="Label_PendingRankNo">Disable Psuedo-Tenpai</string>
    <string name="Label_PendingRankEmpty">Empty OK</string>
    <string name="Label_PendingRankFuriten">Furiten OK</string>
    <string name="Label_PendingRank0OK">0-han OK</string>
    <string name="Label_PendingRank2">When 2-han constraint</string>
    <string name="Label_PendingRank2Fix1">1-han required</string>
    <string name="Desc_PendingRank2Fix1">(more 1 han if \"0-han OK\" for 1-han constraint)</string>
    <string name="Label_Yakuman">Yakuman</string>
    <string name="Label_9RenPinSou">Not Mans 9 gates</string>
    <string name="Label_AllGreenNoBlue">All green w/o dragon</string>
    <string name="Label_BigRing">7 pairs by pin2-8</string>
    <string name="Label_BigRingNotPin">7 pairs by man2-8 / sou2-8</string>
    <string name="Label_4SeqNum">4SeqTriples</string>
    <string name="Label_7Star">7StarOrphan</string>
    <string name="Label_NoPair13">13 broken</string>
    <string name="Label_NoPair14">14 broken</string>
    <string name="Label_Rank13">13 or more han(Max Mangan*3 if off）</string>
    <string name="Label_5thKan">Accept AbortiveDraw by 5th Kan for a player\'s Tenpai of 4 Kans. Select Draw on Menu.</string>
    <string name="Label_KokusiAnkanRon">Accept Ron for Ankan by Kokushi.</string>
    <string name="Desc_Yakuman">14 broken is by the status of at first Take.\nAdditional to this and Double Youman,4 Kans with pair, Big 3 dragons, All honors, Litte 4 wind, All terminals, Heavenly hans, Hand of earth. Some are composable to Double Yakuman like as Big 3 dragons and All honors.</string>
    <string name="Label_Yakuman_Renho">Hand of man</string>
    <string name="Label_RenhoMix">Sum up to other Yaku.</string>
    <string name="Desc_Yakuman_Renho">Specify rank. Composable means adding han of other Yaku to the han of the rank(Manga:4 han)\n
    				Not composable means get higher of normal point and this setting.</string>
    <string name="Label_YakuStandard">Standard</string>
    <string name="Desc_YakuStandard">(see another topic for 7 pairs)</string>
    <string name="Label_YakuStandardList"> (1) Riichi, Value tiles, Conceild Self-Draw, Tanyao(All Simples), Pinfu(All Runs), Double Run(1 identical sequence), Final Tile Win, Win by Kan-Draw, Double-Riichi(+1), Robbing a Kan.\n
					(2) All Triples, 3 Color Runs, Straight, Mixed outside hand, 3 Conceiled Triples, Little 3 dragons(+2), All Terminals and Honors, 3 Color Triples,3 Kans.\n
					(3) Half flush, Pure outside hand, 2 Double Runs(2 identical sequences).\n
					(6) Full Flush.\n
					(Note)---(n) : han(=rank). Usualy 1 rank down if not All-In-Hand with some exception. (+n): always along with other rank.</string>
    <string name="Desc_YakuLocal">See also topic of Yakuman, Hand of man, NagasiMangan. Otherwise, take agree in the group beforehand.</string>
    <string name="Label_OneShot">One-shot</string>
</resources>