<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Label_8Continue"
                     android:textSize="@dimen/smallfont_textsize_dialog_textview_middle"
        />
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <RadioButton
            android:id="@+id/rb8ContNo"
            android:text="@string/Label_No"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
        <RadioButton
            android:id="@+id/rb8ContDealer"
            android:text="@string/Label_8ContDealer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
        <RadioButton
            android:id="@+id/rb9ContDealer"
            android:text="@string/Label_9ContDealer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
    </LinearLayout> <!--line1-->
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <RadioButton
            android:id="@+id/rb8ContOnePlayer"
            android:text="@string/Label_8ContOnePlayer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
        <RadioButton
            android:id="@+id/rb8ContStick"
            android:text="@string/Label_8ContStick"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
        <RadioButton
            android:id="@+id/rb8ContStickAnyOne"
            android:text="@string/Label_8ContStickAnyOne"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
        />
    </LinearLayout> <!--line2-->
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <CheckBox
            android:id="@+id/cb8ContNoNeedYaku"
            android:text="@string/Label_8ContNoNeedYaku"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
        />
        <CheckBox
            android:id="@+id/cb8ContMulti"
            android:text="@string/Label_8ContMulti"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
        />
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <CheckBox
            android:id="@+id/cb8ContReset"
            android:text="@string/Label_8ContReset"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
    </LinearLayout> <!--line2-->
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Desc_8Continue"
        />
    </LinearLayout> <!--line2-->
</LinearLayout>
