<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>  <!--drawnMangan-->
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >  <!--line1-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserAction_Reach"
            android:textSize="@dimen/textview_middle"
        />
        <CheckBox
            android:id="@+id/cbOpenReach"
            android:text="@string/UserAction_Reach_Open_YN"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
    			android:background="@color/descriptiononly"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Desc_OpenReach"
            android:layout_marginLeft="5dp"
        />
    </LinearLayout>  <!--line1-->
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >  <!--line1-->
        <CheckBox
            android:id="@+id/cbOneShot"
            android:text="@string/Label_OneShot"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
    			android:background="@color/descriptiononly"
        />
    <!--			android:background="@color/getvalue"-->
        <CheckBox
            android:id="@+id/cbAnkanAfterReach"
            android:text="@string/Label_AnkanAfterReach"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
    			android:background="@color/descriptiononly"
        />
        <!--CheckBox
            android:id="@+id/cbMissingReach"
            android:text="@string/UserAction_Reach_Missing_YN"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        /-->
    <!--			android:background="@color/getvalue"-->
    </LinearLayout>  <!--line1-->
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_FuritenReach"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/textview_small_middle"
    			android:background="@color/descriptiononly"
        />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/rgFuritenReach"
            android:layout_width="wrap_content"
        >
            <RadioButton
                android:id="@+id/rbFuritenReachNo"
                android:text="@string/Label_FuritenReachNo"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
            <RadioButton
                android:id="@+id/rbFuritenReachYes"
                android:text="@string/Label_FuritenReachYes"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
            <RadioButton
                android:id="@+id/rbFuritenReachReject"
                android:text="@string/Label_FuritenReachReject"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >  <!--line2-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_ReachLimit"
            android:gravity="center_vertical"
        />
    </LinearLayout>  <!--line2-->
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >  <!--line3-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_ReachLimitOpen"
            android:layout_gravity="center_vertical"
        />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/rgOpenReach"
            android:layout_width="wrap_content"
        >
            <RadioButton
                android:id="@+id/rbOpenReachYakuman"
                android:text="@string/Label_ReachLimitOpenYakuman"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
            <RadioButton
                android:id="@+id/rbOpenReachChombo"
                android:text="@string/Label_ReachLimitOpenChombo"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
        </RadioGroup>
    </LinearLayout>  <!--line3-->
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >  <!--line4-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_ReachLimitOpenRobot"
            android:layout_gravity="center_vertical"
        />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/rgOpenReachRobot"
            android:layout_width="wrap_content"
        >
            <RadioButton
                android:id="@+id/rbOpenReachRobotNone"
                android:text="@string/Label_ReachLimitOpenRobotNone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
    			android:background="@color/descriptiononly"
            />
            <RadioButton
                android:id="@+id/rbOpenReachRobotSkip"
                android:text="@string/Label_ReachLimitOpenRobotSkip"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
            <RadioButton
                android:id="@+id/rbOpenReachRobotNormal"
                android:text="@string/Label_ReachLimitOpenRobotNormal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
        </RadioGroup>
    </LinearLayout>  <!--line3-->

</LinearLayout>
