<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Label_Yakuman"
                     android:textSize="@dimen/smallfont_textsize_dialog_textview_middle"
        />
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <CheckBox
                android:id="@+id/cbYakuman_AllGreenNoBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_AllGreenNoBlue"
            />
            <CheckBox
                android:id="@+id/cbYakuman_9RenPinSou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_9RenPinSou"
            />
        </LinearLayout>
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <CheckBox
                android:id="@+id/cbYakuman_NoPair13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_NoPair13"
            />                                                                                                    
            <CheckBox
                android:id="@+id/cbYakuman_NoPair14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_NoPair14"
            />                                                                                                    
        </LinearLayout>
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <CheckBox
                android:id="@+id/cbYakuman_BigRing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_BigRing"
            />
            <CheckBox
                android:id="@+id/cbYakuman_BigRingNotPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_BigRingNotPin"
            />
        </LinearLayout>
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <CheckBox
                android:id="@+id/cbYakuman_4SeqNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_4SeqNum"
            />
            <CheckBox
                android:id="@+id/cbYakuman_7Star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_7Star"
                android:visibility="gone"
            />
            <CheckBox
                android:id="@+id/cbYakuman_Rank13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_Rank13"
            />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <CheckBox
            android:id="@+id/cbYakuman_KokusiAnkanRon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_KokusiAnkanRon"
        />
        <!--CheckBox
            android:id="@+id/cbYakuman_OpenReachRon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_OpenReachRon"
        /-->
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <CheckBox
            android:id="@+id/cbYakuman_5thKan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_5thKan"
        />
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Desc_Yakuman"
        />
    </LinearLayout>
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="2px"
                android:background="@color/separater"
    />
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Label_Yakuman_Renho"
                     android:textSize="@dimen/smallfont_textsize_dialog_textview_middle"
            />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Label_PointAmmount"
                android:layout_marginLeft="20px"
            />
            <Spinner
                 android:id="@+id/spnRenhoRank"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
            />
        </LinearLayout>
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <CheckBox
                android:id="@+id/cbYakuman_RenhoMix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_RenhoMix"
            />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Desc_Yakuman_Renho"
        />
    </LinearLayout>
</LinearLayout>
