<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>  <!--drawnMangan-->
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="2px"
                android:background="@color/separater"
    />
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_PendingRank0"
	            android:textSize="@dimen/textview_middle"
        />
        <CheckBox
            android:id="@+id/cbPendingRankNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_PendingRankNo"
        />
        <CheckBox
            android:id="@+id/cbPendingRankEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_PendingRankEmpty"
        />
        <CheckBox
            android:id="@+id/cbPendingRankFuriten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_PendingRankFuriten"
        />
        <CheckBox
            android:id="@+id/cbPendingRank0OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_PendingRank0OK"
        />
    </LinearLayout>
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_PendingRank2"
        />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/rgPendingRank2"
            android:layout_width="wrap_content"
        >
            <RadioButton
                android:id="@+id/rbPendingRank2No"
                android:text="@string/Label_PendingRank0OK"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
            <RadioButton
                android:id="@+id/rbPendingRank2Fix1"
                android:text="@string/Label_PendingRank2Fix1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Desc_PendingRank2Fix1"
        />
    </LinearLayout>
</LinearLayout>
