<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:gravity="center_vertical"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Label_YakuStandard"
                     android:textSize="@dimen/smallfont_textsize_dialog_textview_middle"
        />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
                android:text="@string/Desc_YakuStandard"
            android:layout_gravity="center_vertical"
        />
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
            android:text="@string/Label_YakuStandardList"
    />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
            android:text="@string/Desc_YakuLocal"
    />
</LinearLayout>
